--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
         </div>
         
         <div class="form-group">
-            <h1>Metropolitan Museum Art Collection</h1>
+            <h1>Colleccion del Museo Metropolitano de Arte</h1>
             <label for="departamento">Departamento</label>
             <select id="departamentoLista"></select>
             <div id="gallerydept"></div>
@@ -38,8 +38,8 @@
             </select>
         </div>
         <div class="form-group">
-            <label for="palabra_clave">Palabra clave</label>
-            <input type="text" id="palabra_clave" name="palabra_clave" placeholder="Ingrese la palabra clave">
+            <label for="palabra_clave">¿Que objetos desea buscar?</label>
+            <input type="text" id="palabra_clave" name="palabra_clave" placeholder="Ingrese nombre del Objeto">
         </div>
        
         <div class="form-group flex-container">
