--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
         </div>
         
         <div class="form-group">
-            <h1>Colección del Museo Metropolitano de Arte</h1>
+            <h1>Colección de Arte del Museo Metropolitano</h1>
             <label for="departamento">Departamento</label>
             <select id="departamentoLista"></select>
             <div id="gallerydept"></div>
