--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
             <button id="limpiarButton" type="button">Limpiar Busqueda</button>
         </div>
     </div>
-    <div id="loader" class="loader" style="display:none;"></div> <!-- Loader -->
+    <div id="loader" class="loader" style="display:none;"></div> 
     <div id="gallery" class="gallery"></div>
     <div class="pagination">
         <button id="antButton" onclick="cambiarPagina(-1)" style="display:none;" disabled>Anterior</button>
